fix: gap on small-mobile between project cards on the main page

--- a/src/components/main/projects/projects.scss
+++ b/src/components/main/projects/projects.scss
@@ -28,10 +28,6 @@
       @include tablet {
         margin-bottom: 40px;
       }
-
-      @include small-mobile {
-        margin-bottom: 20px;
-      }
     }
   }
 
